chore: unified "module name" in rest-api
