# packages/rest-api/src/routes/swapV2Route.ts
@@ -86,6 +86,9 @@ const router: express.Router = express.Router()
  *                 routerAddress:
  *                   type: string
  *                   description: The address of the router contract
+ *                 moduleName:
+ *                   type: string
+ *                   description: The name of the module used for the swap
  *                 callData:
  *                   type: object
  *                   nullable: true
@@ -109,6 +112,7 @@ const router: express.Router = express.Router()
  *               expectedToAmount: "999746386"
  *               minToAmount: "994747654"
  *               routerAddress: "0x512000a034E154908Efb1eC48579F4ffDb000512"
+ *               moduleName: "Default"
  *               callData: {
  *                 to: "0x512000a034E154908Efb1eC48579F4ffDb000512",
  *                 data: "0x...",
